new edit for design

--- a/index.html
+++ b/index.html
@@ -396,15 +396,11 @@
             <div class="fourth-box mgl">
               <div class="fourth-parent">
                 <div class="fourth-img">
-                  <img
-                    src="images/team/team1.webp"
-                    class="fourth-round"
-                    alt=""
-                  />
+                  <img src="images/team/7.jpg" class="fourth-round" alt="" />
                 </div>
                 <div class="fourth-info">
-                  <span>Aleen</span>
-                  <p>Software Developer</p>
+                  <span>Alexie</span>
+                  <p>Interior designer</p>
                 </div>
               </div>
               <p class="fourth-desc">
@@ -415,15 +411,11 @@
             <div class="fourth-box mgl">
               <div class="fourth-parent">
                 <div class="fourth-img">
-                  <img
-                    src="images/team/team2.webp"
-                    class="fourth-round"
-                    alt=""
-                  />
+                  <img src="images/team/3.jpg" class="fourth-round" alt="" />
                 </div>
                 <div class="fourth-info">
-                  <span>Aleen</span>
-                  <p>Flutter Developer</p>
+                  <span>Federer</span>
+                  <p>Architectural Engineer</p>
                 </div>
               </div>
               <p class="fourth-desc">
@@ -557,8 +549,8 @@
             <p>
               The “starchitect” label is a little overused, but the late Zaha
               Hadid was certainly a true original. Her fluid and organic designs
-              are scattered all over the world, but the Heydar Aliyev Center
-              (above) in Baku, Azerbaijan
+              are scattered all over the world, but the Heydar Aliyev Center in
+              Baku
             </p>
             <a href="">
               <p class="news-btn">Read More</p>
@@ -582,8 +574,8 @@
             <h5>Top Modern</h5>
             <p>
               it have led to the creation of some very impressive buildings and
-              structures around the world. Studying these architectural wonders
-              can provide you with a source of inspiration for your own designs.
+              structures. Studying these architectural wonders can provide you
+              with a source of inspiration for your own designs.
             </p>
             <a href="">
               <p class="news-btn">Read More</p>
